perubahan agar responsive

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>COVID-19</title>
-  <link rel="shortcut icon" href="./src/korona.ico">
   <link rel="stylesheet" href="stylesheet.css">
   <!-- <link rel="stylesheet" href="responsive.css"> -->
   <!-- <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> -->
@@ -27,12 +26,60 @@
 
   <!-- bagian 1: keterangan Jumlah Kasus, Sembuh & Meninggal -->
   <div class="top-wrapper">
-
+      <h1 class="title-inform">INFORMASI CORONA VIRUS</h1>
+      <div class="content">
+        <div class="informasi satu">
+          <h2 class="terkonfirmasi">
+            TERKONFIRMASI
+          </h2>
+          <p class="jumlah">
+            1.444
+          </p>
+          <h2 class="keterangan">
+            +192 Kasus
+          </h2>
+        </div>
+        <div class="informasi dua">
+          <h2 class="Perawatan">
+            Perawatan
+          </h2>
+          <p class="jumlah">
+            1.217
+          </p>
+          <h2 class="keterangan">
+            20% dalam konfirmasi
+          </h2>
+        </div>
+        <div class="informasi tiga">
+          <h2 class="sembuh">
+            Sembuh
+          </h2>
+          <p class="jumlah">
+            800
+          </p>
+          <h2 class="keterangan">
+            80% dari konfirmasi
+          </h2>
+        </div>
+        <div class="informasi empat">
+          <h2 class="meninggal">
+            Meninggal
+          </h2>
+          <p class="jumlah">
+            0
+          </p>
+          <h2 class="keterangan">
+            alhamdulillah
+          </h2>
+        </div>
+      </div>
   </div>
 
   <!-- pencegahan COVID-19 -->
   <div class="lesson-wrapper">
-
+    <div class="container">
+      
+    </div>
   </div>
 
   <!-- pemberitahuan tentang Gejala COVID-19 -->
@@ -42,7 +89,7 @@
 
   <footer>
     <div class="container">
-      <img src="./src/corona.png">
+      <img src="./src/korona.png">
       <p>Jaga Jarak dan Jaga Kesehatan.</p>
     </div>
   </footer>
