agar lebih responsive

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 
   <!-- bagian 1: keterangan Jumlah Kasus, Sembuh & Meninggal -->
   <div class="top-wrapper">
-    <div class="container">
       <h1 class="title-inform">INFORMASI CORONA VIRUS</h1>
       <div class="content">
         <div class="informasi satu">
@@ -42,7 +41,7 @@
         </div>
         <div class="informasi dua">
           <h2 class="Perawatan">
-            Dalam Perawatan
+            Perawatan
           </h2>
           <p class="jumlah">
             1.217
@@ -74,12 +73,13 @@
           </h2>
         </div>
       </div>
-    </div>
   </div>
 
   <!-- pencegahan COVID-19 -->
   <div class="lesson-wrapper">
-
+    <div class="container">
+      
+    </div>
   </div>
 
   <!-- pemberitahuan tentang Gejala COVID-19 -->
