Update Bagian Utama

--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>COVID-19</title>
+  <link rel="shortcut icon" href="./src/korona.ico">
   <link rel="stylesheet" href="stylesheet.css">
-  <!-- <link rel="stylesheet" href="responsive.css"> -->
-  <!-- <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> -->
+  <link rel="stylesheet" href="responsive.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
   <header>
     <div class="container">
       <div class="header-left">
-        <img class="logo" src="./src/corona.png">
+        <img class="logo" src="./src/corona_1.png">
       </div>
       <!-- Tambahkan ikon menu disini -->
       <span class="fa fa-bars menu-icon"></span>
@@ -26,6 +27,7 @@
 
   <!-- bagian 1: keterangan Jumlah Kasus, Sembuh & Meninggal -->
   <div class="top-wrapper">
+    <div class="container">
       <h1 class="title-inform">INFORMASI CORONA VIRUS</h1>
       <div class="content">
         <div class="informasi satu">
@@ -40,16 +42,16 @@
           </h2>
         </div>
         <div class="informasi dua">
-          <h2 class="Perawatan">
-            Perawatan
+          <h2 class="meninggal">
+            Meninggal
           </h2>
           <p class="jumlah">
-            1.217
+            0
           </p>
           <h2 class="keterangan">
-            20% dalam konfirmasi
+            alhamdulillah
           </h2>
-        </div>
+        </div>        
         <div class="informasi tiga">
           <h2 class="sembuh">
             Sembuh
@@ -62,24 +64,23 @@
           </h2>
         </div>
         <div class="informasi empat">
-          <h2 class="meninggal">
-            Meninggal
+          <h2 class="Perawatan">
+            Dalam Perawatan
           </h2>
           <p class="jumlah">
-            0
+            1.217
           </p>
           <h2 class="keterangan">
-            alhamdulillah
+            20% dalam konfirmasi
           </h2>
         </div>
       </div>
+    </div>
   </div>
 
   <!-- pencegahan COVID-19 -->
   <div class="lesson-wrapper">
-    <div class="container">
-      
-    </div>
+
   </div>
 
   <!-- pemberitahuan tentang Gejala COVID-19 -->
@@ -89,7 +90,7 @@
 
   <footer>
     <div class="container">
-      <img src="./src/korona.png">
+      <img src="./src/corona.png">
       <p>Jaga Jarak dan Jaga Kesehatan.</p>
     </div>
   </footer>
