Update Bagian Utama

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="shortcut icon" href="./src/korona.ico">
   <link rel="stylesheet" href="stylesheet.css">
   <link rel="stylesheet" href="responsive.css">
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <!-- <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <header>
@@ -16,7 +17,7 @@
         <img class="logo" src="./src/corona_1.png">
       </div>
       <!-- Tambahkan ikon menu disini -->
-      <span class="fa fa-bars menu-icon"></span>
+      <span class="menu-icon fa fa-bars"></span>
       <div class="header-right">
         <a href="#">Beranda</a>
         <a href="#">FAQ</a>
