--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <div class="container">
       <div class="header-left">
-        <img class="logo" src="src/corona_1.png">
+        <img class="logo" src="./src/corona_1.png">
       </div>
       <!-- Tambahkan ikon menu disini -->
       <span class="menu-icon fa fa-bars"></span>
